app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - image: quay.io/praveenrachamreddy/ci-pipeline:1.5.0
          imagePullPolicy: Always
          name: webapp
          ports:
            - containerPort: 8080
              protocol: TCP
