app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: webapp
  name: webapp
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: webapp
    weight: 100
  path: /WebApp
